{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 271,
  "lineage": "1626c915-fdb8-d381-15d8-9f76634f1725",
  "resources": [
    {
      "module": "module.ec2_mod",
      "mode": "managed",
      "type": "aws_instance",
      "name": "project_vm",
      "provider": "module.ec2_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc8d444ee2a42d8a",
            "arn": "arn:aws:ec2:eu-west-1:874021699381:instance/i-078dcd5b745c7bd4a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078dcd5b745c7bd4a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f0f210f01d4b697e",
            "private_dns": "ip-10-0-6-175.eu-west-1.compute.internal",
            "private_ip": "10.0.6.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-090c65691e87b8d00",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e38b1ecab3739f2",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03de60fc6b4addf66"
            ]
          },
          "dependencies": [
            "module.ec2_mod.aws_key_pair.key_pair",
            "module.vpc_mod.aws_security_group.instance_sg",
            "module.vpc_mod.aws_subnet.public_subnet",
            "module.vpc_mod.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874021699381:internet-gateway/igw-06038c6e180b064c2",
            "id": "igw-06038c6e180b064c2",
            "owner_id": "874021699381",
            "vpc_id": "vpc-0901bd8a2bd3de56c"
          },
          "dependencies": [
            "module.vpc_mod.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d332dc89fb6d19da",
            "owner_id": "874021699381",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06038c6e180b064c2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0901bd8a2bd3de56c"
          },
          "dependencies": [
            "module.vpc_mod.aws_internet_gateway.igw",
            "module.vpc_mod.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874021699381:security-group/sg-03de60fc6b4addf66",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03de60fc6b4addf66",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg",
            "name_prefix": "",
            "owner_id": "874021699381",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0901bd8a2bd3de56c"
          },
          "dependencies": [
            "module.vpc_mod.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874021699381:subnet/subnet-0043d050ac6d61c63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-0043d050ac6d61c63",
            "map_public_ip_on_launch": false,
            "owner_id": "874021699381",
            "vpc_id": "vpc-0901bd8a2bd3de56c"
          },
          "dependencies": [
            "module.vpc_mod.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874021699381:subnet/subnet-04e38b1ecab3739f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-04e38b1ecab3739f2",
            "map_public_ip_on_launch": false,
            "owner_id": "874021699381",
            "vpc_id": "vpc-0901bd8a2bd3de56c"
          },
          "dependencies": [
            "module.vpc_mod.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_mod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "module.vpc_mod.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:874021699381:vpc/vpc-0901bd8a2bd3de56c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-005afd155f0e7b6a5",
            "default_route_table_id": "rtb-055b1f0c36d67a4cd",
            "default_security_group_id": "sg-05cdf068defeca5c4",
            "dhcp_options_id": "dopt-69bc870f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0901bd8a2bd3de56c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-055b1f0c36d67a4cd",
            "owner_id": "874021699381"
          }
        }
      ]
    }
  ]
}